feat: swagger for other endpoint
